# TGuitar

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  tguitar.toml
include/audio/: AudioData.h  AudioProcessor.h  Constants.h  DelayEffect.h  DistortionEffect.h  Effect.h  Globals.h  Metronome.h  Utils.h
include/config/: LoadConfigFile.h  toml.h
include/math/: dj_fft.h
include/ui/: InitialMenu.h  MainInterface.h  TGuitarUI.h  TerminalUI.h  Utils.h
src/: CMakeLists.txt  Globals.hpp  main.cpp
src/audio/: AudioData.cpp  AudioProcessor.cpp  DelayEffect.cpp  DistortionEffect.cpp  Effect.cpp  Globals.cpp  Metronome.cpp
src/ui/: InitialMenu.cpp  MainInterface.cpp  TGuitarUI.cpp
